# sandbox-spawner

./: CMakeLists.txt  README.md
include/: Utilities.h  base64.h
resources/: build_rpm.sh  deployment.md
resources/rpm_specs/: sandbox-spawner.spec
src/: Process.cpp  Utilities.cpp  base64.cpp  sandbox_spawner.cpp
